<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical" >
    <LinearLayout android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:layout_marginBottom="30dp">
        <ImageView 
            android:contentDescription="@string/app_name"
            android:layout_width="30dp"         
        	android:layout_height="30dp"
        	android:layout_gravity="center"
        	android:src="@drawable/icon"/>
        <TextView android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:layout_marginLeft="5dp"
        	android:text="@string/app_name"
        	android:textSize="25dp"
        	android:textColor="@android:color/white"
        	android:layout_gravity="center">
        </TextView>
    </LinearLayout>
    <TextView android:id="@+id/about_version"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:layout_margin="3dp"/>
    <TextView android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:layout_margin="5dp"
        	android:textSize="18dp"
        	android:gravity="center"
        	android:text="@string/about_info"/>
    <TextView android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:layout_margin="3dp"
        	android:textSize="14dp"
        	android:gravity="center"
        	android:text="@string/about_copyright"/>
</LinearLayout>